# numbat-app

./: .gitignore  .pre-commit-config.yaml  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  build-apk.sh  build.sh  dev.sh
.github/workflows/: ci.yml
docs/: ios-installation.md  release-process.md
scripts/: check-development-team.sh
src/: dimension-metadata.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
