[package]
name = "numbat-app"
version = "1.18.0+3"
description = "A mobile/desktop app for Numbat"
authors = ["David Peter <mail@david-peter.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sharkdp/numbat-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-haptics = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
numbat = { version = "1.18", default-features = false, features = [
    "html-formatter",
    "fetch-exchangerates",
] }
html-escape = "0.2.13"
codespan-reporting = "0.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
